# HyprFocus

./: CHANGELOG.md  Cargo.toml  README.md  bacon.toml  cliff.toml  deny.toml  justfile  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: check.yml  release.yml
src/: app_cmds.rs  focus.rs  get.rs  io.rs  main.rs  observability.rs
