[package]
name = "hyprfocus"
version = "1.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Open or focus your apps instantly"
repository = "https://github.com/liamwh/HyprFocus"
authors = ["Liam Woodleigh-Hardinge", "liam.woodleigh@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
anyhow = "1"
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
hyprland = "0.4.0-alpha.2"


[lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"

[lints.clippy]
all = { level = "warn", priority = 1 }
pedantic = { level = "deny", priority = 0 }
nursery = { level = "deny", priority = 0 }
